--- a/rag_backend/docker_compose.yml
+++ b/rag_backend/docker_compose.yml
@@ -62,6 +62,20 @@ services:
       - ~/docker/rag/pgdata/:/var/lib/postgresql/data
     networks:
       - qdb    
+  pgadmin:
+    container_name: container-pgadmin
+    image: dpage/pgadmin4
+    depends_on:
+      - vectdba
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    restart: unless-stopped
+    networks:
+      - qdb       
+
 volumes:
   qdrant_data:
 
