--- a/rag_backend/docker_compose.yml
+++ b/rag_backend/docker_compose.yml
@@ -75,7 +75,22 @@ services:
     restart: unless-stopped
     networks:
       - qdb       
-
+  miniox:
+    image: lazybit/minio
+    # image with admin ui from older release
+    command: server /data --console-address ":9090"
+    hostname: miniox
+    restart: always
+    ports:
+      - 9000:9000
+      - 9090:9090
+    volumes:
+      - ./minio_datax:/data
+    environment:
+      - MINIO_ROOT_USER=admin
+      - MINIO_ROOT_PASSWORD=password
+    networks:
+      - qdb
 volumes:
   qdrant_data:
 
